Mon Sep 30 15:45:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (OPT_RSIZE): Changed to 'R'.
	(OPT_WSIZE): Changed to 'W'.
	(doc): Add general description.

Wed Sep 18 13:03:22 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (netfs_append_args): Renamed from netfs_get_options.
	Don't initialize ARGZ & ARGZ_LEN anymore.
	Add remote filesystem spec to output.
	(hold): Variable removed.
	(main): Don't use HOLD anymore.
	
Thu Sep 12 16:46:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(nfs): Omit special dependency.

Tue Sep  3 14:00:25 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* nfs-spec.h: Renamed from rpcsvc/nfs_prot.h.
	* mount.c: Include "mount.h" instead of <rpcsvc/mount.h>.
	* nfs.h: Include "nfs-spec.h" instead of <rpcsvc/nfs_prot.h>.
	* rpcsvc/mount.h: Deleted file.
	* rpcsvc: Deleted directory.
	* mount.h (MOUNTPROG): Renamed from MOUNT_RPC_PROGRAM.
	(MOUNTVERS): Renamed from MOUNT_RPC_VERSION.
	* Makefile (RPCSVC_FILES): Deleted var.
	(lndist, lndist-rpcsvc-files,
	$(top_srcdir)/hurd-snap/$(dir)/rpcsvc): Deleted targets.
	(LCLHDRS): Added mount.h and nfs-spec.h.

Thu Aug 29 10:41:27 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* rpcsvc/nfs_prot.h (createmode): Spell EXCLUSIVE correctly.
	* nfs.c (hurd_mode_to_nfs_type): New function.
	* nfs.h (hurd_mode_to_nfs_type): New decl.
	* ops.c (netfs_attempt_rmdir): process_wcc_stat for NP, not DIR.
	(netfs_attempt_link): Spell netfs_validate_stat correctly. 
	(minor, major): New macros.
	(netfs_report_access): Don't try and return an error.

	* rpc.c (conduct_rpc): Tolerate and return errors from write.

	* Makefile (RPCSVC_FILES): New variable.
	(lndist): Depend on lndist-rpcsvc-files.
	(lndist-rpcsvc-files, $(top_srcdir)/hurd-snap/$(dir)/rpcsvc): New
	targets. 

Fri Aug 16 11:56:53 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (process_wcc_stat): New function.